--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -35,7 +35,7 @@
 	</header>
 
 	<main class="container">
-		<p class="scroll">scroll down to find out more about myself</p>
+		<p class="scroll">scroll down to find out more about me</p>
 		
 		<!-- works -->
 		<section class="works">
